<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">
<!--Main Linear Layout-->
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0494D6"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    >


    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/googleg_standard_color_18"
        android:layout_marginBottom="30dp"

        ></ImageView>


    <!--This is the linear  layout for edit text for password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"

            ></EditText>









    </LinearLayout>
<!--Linear Layout for email ends here -->


    <!--Linear Layout for password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >
        <!--Edit text for password-->

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"

            ></EditText>

    </LinearLayout>
<!--LinearLayout for Password ends over here -->



  <Button
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:background="#FFF756"
      android:id="@+id/btn_login"
      android:text="@string/btn_login"
      android:textColor="@android:color/black"


      ></Button>




    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="#FFF756"

        ></Button>


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"></Button>


</LinearLayout>



 <ProgressBar
     android:layout_width="30dp"
     android:layout_height="30dp"
     android:layout_gravity="center|bottom"
     android:layout_marginBottom="20dp"
     android:visibility="gone"
     ></ProgressBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>